# json2toon-optimizer

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/: BRANCH_PROTECTION.md  CODEOWNERS  INSTRUCOES_PT.md  PROTECAO_DE_BRANCH.md
demo/: demo.py
docs/: ARCHITECTURE.md  GUIDE.md  INSTALLATION.md  TOKEN_COUNTING.md  TOON_SPECIFICATION.md
examples/: README.md  batch_processing_example.py  cli_usage_example.py  streaming_example.py
examples/comparison/: COMPARISON_RESULTS.md  compact_wins_1_deep_structure.json  compact_wins_2_repetitive.json  compact_wins_3_tabular.json  compact_wins_4_long_strings.json  compact_wins_5_nested_config.json  compact_wins_7_minimal_flat.json  compact_wins_8_uniform_array.json  compact_wins_9_nested_simple.json  compare_all.py  json_wins_1_matrix.json  toon_wins_1_text_heavy.json
examples/complex/: deeply_nested.json  employees.json  long_array.json  many_strings.json  products.json  test_compact.json
src/json2toon/: __init__.py  batch_processor.py  cli.py  stream_processor.py  toon_converter.py
tests/: test_json2toon.py
